fix(footer): resolve footer linklist hover styling in dark mode (#97)

--- a/src/theme/Footer/styles.module.css
+++ b/src/theme/Footer/styles.module.css
@@ -17,6 +17,10 @@
   color: #fff;
 }
 
+.col a:hover {
+  color: #fff;
+}
+
 [data-theme='dark'] .col a {
   color: var(--ifm-link-color);
 }
